--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "git",
     "diff"
   ],
+  "homepage": "https://github.com/antonlegoo/gatsby-source-gitdiff",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/antonlegoo/gatsby-source-gitdiff"
+  },
   "dependencies": {
     "colors": "^1.3.2",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
+    "moment": "^2.22.2"
   }
 }
